<resources>
    <string name="app_name">HowlStargram_Kotlin</string>
    <string name="facebook_app_id">211403479957946</string>
    <string name="fb_login_protocol_scheme">fb211403479957946</string>

    <!-- Sign In -->
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="signin_email">이메일로 로그인</string>
    <string name="signin_google">구글 로그인</string>
    <string name="signin_facebook">페이스북 로그인</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">로그아웃</string>
    <string name="signout_success">로그아웃 성공</string>
    <string name="signout_fail">로그아웃 실패</string>
    <string name="checkout_id_password">로그인에 실패하였습니다. 아이디 또는 비밀번호를 확인해주세요…</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="signup_email">이메일로 가입</string>

    <!-- Research -->
    <string name="research_tab">탐색 탭</string>

    <!-- Search -->
    <string name="recently_search">최근 검색</string>

    <!-- Register -->
    <string name="register">가입하기</string>
    <string name="user_name">이름</string>
    <string name="user_nickName">사용자 이름</string>

    <!-- Bottom Navigation View -->
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="gallery">갤러리</string>
    <string name="favorite">좋아요</string>
    <string name="account">계정</string>

    <!-- DetailFragment -->
    <string name="favorite_count">좋아요 0개</string>
    <string name="explain">설명</string>
    <string name="no_content">불러올 글이 없습니다!\n 새로운 친구를 팔로잉해보시는게 어떠신가요?</string>

    <!-- Account -->
    <string name="post">게시물</string>
    <string name="following">팔로잉</string>
    <string name="follower">팔로워</string>
    <string name="follow">팔로우</string>
    <string name="follow_cancel">팔로우 취소</string>
    <string name="profile">프로필</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="new_content">새 게시글</string>
    <string name="upload_image">이미지 업로드</string>
    <string name="hint_image_content">문구 입력</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="menu_finish">완료</string>

    <!-- reels -->
    <string name="reels">릴스</string>

    <!-- Profile -->
    <string name="edit_profile">프로필 편집</string>
    <string name="edit_profile_image">프로필 사진 변경</string>

    <!-- Gallery -->
    <string name="menu_next">다음</string>

    <!-- Comment -->
    <string name="write_comment">댓글 달기</string>
    <string name="upload">게시</string>
    <string name="comment">댓글</string>

    <!-- Like -->
    <string name="like">좋아요</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- bottom sheet -->
    <string name="make_type">만들기</string>

</resources>