<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/screen_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>

    <item
        android:id="@+id/screen_search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search"/>

    <item
        android:id="@+id/screen_add_photo"
        android:icon="@drawable/ic_add_a_photo"
        android:enabled="true"
        android:title="@string/upload_image"/>

    <item
        android:id="@+id/screen_favorite_alarm"
        android:icon="@drawable/ic_favorite_border"
        android:enabled="true"
        android:title="@string/favorite"/>

    <item
        android:id="@+id/screen_account"
        android:icon="@drawable/ic_account"
        android:enabled="true"
        android:title="@string/account"/>
</menu>