<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".navigation.CommentActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/comment"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_comment"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="7.5dp"
            android:src="@drawable/baseline_account_circle_black_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_comment" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7.5dp"
            android:layout_marginEnd="7.5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_upload_comment"
            app:layout_constraintStart_toEndOf="@id/iv_user_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_comment_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_comment"
                android:inputType="text"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_upload_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7.5dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="@id/layout_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
