<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="kr.co.lee.howlstagram_kotlin.ui.profile.ProfileEditActivity" />

        <variable
            name="vm"
            type="kr.co.lee.howlstagram_kotlin.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.ProfileEditActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:onClick="@{() -> handler.profileClickListener()}"
            android:src="@drawable/baseline_account_circle_black_20"
            app:civ_border_color="@color/black"
            app:civ_border_width="0.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:set_glide_circle_image="@{vm.profileUrl}" />

        <TextView
            android:id="@+id/tv_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> handler.profileClickListener()}"
            android:text="@string/edit_profile_image"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/iv_profile"
            app:layout_constraintStart_toStartOf="@id/iv_profile"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_edit_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:text="@{vm.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/layout_user_name"
            app:layout_constraintStart_toStartOf="@id/layout_user_name"
            app:layout_constraintTop_toBottomOf="@id/layout_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_nickName"
                android:text="@{vm.userNickName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>